src/objects/inscor__Integration_Message__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Customer_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Quote</label>
        <referenceTo>inscor__Customer_Quote__c</referenceTo>
        <relationshipLabel>Integration Messages</relationshipLabel>
        <relationshipName>Integration_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>inscor__Invoice__c</referenceTo>
        <relationshipLabel>Integration Messages</relationshipLabel>
        <relationshipName>Integration_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Message_ID__c</fullName>
        <label>Message ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Message_Type__c</fullName>
        <label>Message Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>inscor__Purchase_Order__c</referenceTo>
        <relationshipLabel>Integration Messages</relationshipLabel>
        <relationshipName>Integration_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Response_Text_1__c</fullName>
        <label>Response Text 1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Response_Text_2__c</fullName>
        <label>Response Text 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__SO_Action_Name__c</fullName>
        <formula>IF ( inscor__SO_Action__c == 1, &apos;Routine Action&apos;, 
IF ( inscor__SO_Action__c == 2, &apos;Acceptance of a Quotation&apos;, 
IF ( inscor__SO_Action__c == 3, &apos;Alteration to an order&apos;, 
IF ( inscor__SO_Action__c == 6, &apos;Cancel or decrease an order&apos;, 
IF ( inscor__SO_Action__c == 8, &apos;Increase an order&apos;, 
IF ( inscor__SO_Action__c == 9, &apos;Request partial ship quantity of an open order&apos;, &apos;&apos;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO Action Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__SO_Action__c</fullName>
        <label>SO Action</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>inscor__Sales_Order__c</referenceTo>
        <relationshipLabel>Integration Messages</relationshipLabel>
        <relationshipName>Integration_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Service__c</fullName>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aeroxchange</fullName>
                </value>
                <value>
                    <fullName>SPEC2000</fullName>
                </value>
                <value>
                    <fullName>Partsbase</fullName>
                </value>
                <value>
                    <fullName>ILS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Integration Message</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Service__c</columns>
        <columns>inscor__Message_Type__c</columns>
        <columns>inscor__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>inscor__Invoice_Messages</fullName>
        <columns>NAME</columns>
        <columns>inscor__Service__c</columns>
        <columns>inscor__Message_Type__c</columns>
        <columns>inscor__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Message_Type__c</field>
            <operation>equals</operation>
            <value>ATA_SparesInvoice</value>
        </filters>
        <filters>
            <field>inscor__Message_Type__c</field>
            <operation>equals</operation>
            <value>ATA_InvoiceException</value>
        </filters>
        <filters>
            <field>inscor__Message_Type__c</field>
            <operation>equals</operation>
            <value>ATA_InvoiceExceptionAck</value>
        </filters>
        <label>Invoice Messages</label>
    </listViews>
    <listViews>
        <fullName>inscor__Order_Messages</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Message_Type__c</field>
            <operation>equals</operation>
            <value>ATA_SparesOrder</value>
        </filters>
        <filters>
            <field>inscor__Message_Type__c</field>
            <operation>equals</operation>
            <value>ATA_SparesMessageAck</value>
        </filters>
        <filters>
            <field>inscor__Message_Type__c</field>
            <operation>equals</operation>
            <value>ATA_SparesSupplierShipNotice</value>
        </filters>
        <label>Order Messages</label>
    </listViews>
    <listViews>
        <fullName>inscor__Quote_Messages</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Message_Type__c</field>
            <operation>equals</operation>
            <value>ATA_SparesQuoteRequest</value>
        </filters>
        <filters>
            <field>inscor__Message_Type__c</field>
            <operation>equals</operation>
            <value>ATA_SparesQuoteInterim</value>
        </filters>
        <filters>
            <field>inscor__Message_Type__c</field>
            <operation>equals</operation>
            <value>ATA_SparesQuoteFinal</value>
        </filters>
        <label>Quote Messages</label>
    </listViews>
    <nameField>
        <displayFormat>IMSG-{0}</displayFormat>
        <label>Integration Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>